force-app/main/default/objects/Assignment__c/Assignment__c.object-meta.xml
<CustomObject>
    <label>Assignment</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>