force-app/main/default/objects/Assignment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Internal comments.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>