force-app/main/default/objects/Assignment__c/fields/Committee__c.field-meta.xml
<CustomField>
    <fullName>Committee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee</label>
    <referenceTo>Committee__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>