force-app/main/default/objects/Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Committee_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>