force-app/main/default/objects/Assignment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>On what dates does this assignment expire?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>