force-app/main/default/objects/Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>If Assignment End Date is blank or in the future, Is Active = TRUE.  If Assignment End Date is past, Is Active = FALSE.</description>
    <formula>AND( Start_Date__c &lt; TODAY(), OR(ISBLANK(End_Date__c), End_Date__c &gt; TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Assignment End Date is blank or in the future, Is Active defaults to TRUE.  To mark an Assignment as NOT active, add an End Date.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>