force-app/main/default/objects/Assignment__c/fields/Place_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Residence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Place of Residence?</label>
    <type>Checkbox</type>
</CustomField>