force-app/main/default/objects/Assignment__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abbess</fullName>
            </value>
            <value>
                <fullName>Abbot</fullName>
            </value>
            <value>
                <fullName>Accounts Clerk</fullName>
            </value>
            <value>
                <fullName>Active Ministry</fullName>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
            </value>
            <value>
                <fullName>Administrative Secretary to the Archbishop</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Archbishop</fullName>
            </value>
            <value>
                <fullName>Archbishop Emeritus</fullName>
            </value>
            <value>
                <fullName>Archbishop&apos;s Delegate</fullName>
            </value>
            <value>
                <fullName>Archbishop&apos;s Delegate for Administration</fullName>
            </value>
            <value>
                <fullName>Archbishop&apos;s Delegate for Serious Misconduct</fullName>
            </value>
            <value>
                <fullName>Archbishop&apos;s Representative</fullName>
            </value>
            <value>
                <fullName>Archbishop&apos;s Sub Delegate for Serious Misconduct</fullName>
            </value>
            <value>
                <fullName>Archivist</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Assistant Editor</fullName>
            </value>
            <value>
                <fullName>Assistant Notary</fullName>
            </value>
            <value>
                <fullName>Assistant Pastor</fullName>
            </value>
            <value>
                <fullName>Associate Executive Director</fullName>
            </value>
            <value>
                <fullName>Associate Judge</fullName>
            </value>
            <value>
                <fullName>Associate Pastor</fullName>
            </value>
            <value>
                <fullName>Associate State Chaplain</fullName>
            </value>
            <value>
                <fullName>Associate Superintendent</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Bishop</fullName>
            </value>
            <value>
                <fullName>Bishop-Elect</fullName>
            </value>
            <value>
                <fullName>Bookkeeper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>