force-app/main/default/objects/Assignment__c/fields/Primary_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Assignment</label>
    <type>Checkbox</type>
</CustomField>