force-app/main/default/objects/Assignment__c/fields/Reappointment__c.field-meta.xml
<CustomField>
    <fullName>Reappointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reappointment?</label>
    <type>Checkbox</type>
</CustomField>