force-app/main/default/objects/Assignment__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>On what date does this assignment become active?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>