force-app/main/default/objects/Assignment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parish/Mission</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Religious Community</fullName>
            </value>
            <value>
                <fullName>Apostolate</fullName>
            </value>
            <value>
                <fullName>Chaplaincy</fullName>
            </value>
            <value>
                <fullName>Archdiocesan Ministry</fullName>
            </value>
            <value>
                <fullName>Committee_Counsel_Board</fullName>
                <label>Committee, Counsel, Board</label>
            </value>
            <value>
                <fullName>In Residence (without other assignments)</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Sabbatical</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Employment (Priesthood, Perm. Diaconate)</fullName>
            </value>
            <value>
                <fullName>On Loan</fullName>
            </value>
            <value>
                <fullName>Study Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>