force-app/main/default/objects/Assignment__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <description>Parish, School, Mission, Religious Community</description>
    <label>Account</label>
</RecordType>