force-app/main/default/objects/Assignment__c/recordTypes/Committee.recordType-meta.xml
<RecordType>
    <fullName>Committee</fullName>
    <active>true</active>
    <description>Assignments to Committees, Councils and Boards.</description>
    <label>Committee</label>
</RecordType>