force-app/main/default/objects/Assignment__c/recordTypes/On_Leave.recordType-meta.xml
<RecordType>
    <fullName>On_Leave</fullName>
    <active>true</active>
    <description>Used for a Study Leave, Leave of Absence, Sabbatical, etc</description>
    <label>On Leave</label>
</RecordType>