force-app/main/default/objects/Assignment__c/listViews/Active_Assignments_by_Contact.listView-meta.xml
<ListView>
    <fullName>Active_Assignments_by_Contact</fullName>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Committee__c</columns>
    <columns>Position__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Assignments by Contact</label>
</ListView>