force-app/main/default/objects/Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contact__c</columns>
    <columns>Position__c</columns>
    <columns>Account__c</columns>
    <columns>Active__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Assignments</label>
</ListView>