force-app/main/default/objects/Assignment__c/listViews/Committee_Assignments.listView-meta.xml
<ListView>
    <fullName>Committee_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Committee__c</columns>
    <columns>Position__c</columns>
    <columns>Active__c</columns>
    <columns>Primary_Assignment__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Assignment__c.Committee</value>
    </filters>
    <label>Committee Assignments</label>
</ListView>