force-app/main/default/objects/Assignment__c/listViews/Parish_Assignments_List.listView-meta.xml
<ListView>
    <fullName>Parish_Assignments_List</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>Primary_Assignment__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Position__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Assignment__c.Account</value>
    </filters>
    <label>Parish Assignments</label>
</ListView>